@@ -88,8 +88,14 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       if (__result == codecvt_base::noconv)
 	{
-	  __outstr.assign(__first, __last);
-	  __count = __last - __first;
+	  // The codecvt facet will only return noconv when the types are
+	  // the same, so avoid instantiating basic_string::assign otherwise
+	  if _GLIBCXX17_CONSTEXPR (is_same<typename _Codecvt::intern_type,
+					   typename _Codecvt::extern_type>())
+	    {
+	      __outstr.assign(__first, __last);
+	      __count = __last - __first;
+	    }
 	}
       else
 	{
