@@ -1,5 +1,13 @@
 2019-04-26  Jonathan Wakely  <jwakely@redhat.com>
 
+	* config/abi/pre/gnu.ver (GLIBCXX_3.4): Replace wildcard that matches
+	wstring::_M_replace_dispatch with more specific patterns.
+	* include/bits/fs_path.h (path::_S_convert_loc<_InputIterator>):
+	Create const std::string to avoid redundant call to _S_convert_loc
+	with non-const pointers.
+	* include/bits/locale_conv.h (__do_str_codecvt): Use if-constexpr to
+	avoid unnecessary basic_string::assign instantiations.
+
 	* include/std/memory (__uses_alloc_args): Add string-literal to
 	static_assert, to match the one in __uses_alloc.
 	[__cpp_concepts] (_Std_pair): Use C++2a syntax for concept.
